@@ -7,6 +7,13 @@ CHANGES
 - Add a new "A Review of the Web" document to the docs to show how
   Morepath fits within the web.
 
+- The publisher does not respond to a ``None`` render function
+  anymore. Instead, the ``view`` directive now uses a default
+  ``render_view`` if ``None`` is configured. This simplifies the
+  publisher guaranteeing a ``render`` function always exists.
+
+  Fixes https://github.com/morepath/morepath/issues/283
+
 0.9 (2014-11-25)
 ================
 
